--- a/src/gc-repo/gc-repo-shell.html
+++ b/src/gc-repo/gc-repo-shell.html
@@ -18,7 +18,7 @@
       <a title-addon href="https://github.com/[[repo.fullname]]" target="_blank">
         <paper-icon-button  icon="gc-icons:github"></paper-icon-button>
       </a>
-      <gc-repo id="repo" repo-id="[[repoId]]" auth-user="[[authUser]]" repo="{{repo}}"></gc-repo>
+      <gc-repo id="repo" repo-id="[[repoId]]" repo="{{repo}}"></gc-repo>
     </gc-app-fragment-layout>
   </template>
   <script>
