--- a/src/gc-user/gc-user-managed-accounts-external-account-info.html
+++ b/src/gc-user/gc-user-managed-accounts-external-account-info.html
@@ -22,7 +22,7 @@
 
     <gc-config stripe-uri="{{stripeUri}}" stripe-key="{{stripeKey}}"></gc-config>
     <iron-ajax id="postToken" url="[[stripeUri]]/tokens" method="post" body="[[tokenRequestBody]]" content-type="application/x-www-form-urlencoded" on-response="_handleStripeTokenResponse" on-error="_handleStripeTokenError" last-response="{{token}}" last-error="{{tokenError}}"></iron-ajax>
-    <gc-api-ajax id="put" url="/user/managed-accounts/external-account" method="put" auth-user="[[authUser]]" on-response="_handleInfoUpdatedResponse"></gc-api-ajax>
+    <gc-api-ajax id="put" url="/user/managed-accounts/external-account" method="put" on-response="_handleInfoUpdatedResponse"></gc-api-ajax>
 
     <paper-toast id="toast" text="Your bank account info has been submited."></paper-toast>
 
