--- a/src/gc-user/gc-user-shell.html
+++ b/src/gc-user/gc-user-shell.html
@@ -6,8 +6,8 @@
 <dom-module id="gc-user-shell">
   <template>
     <style include="shared-styles"></style>
-    <gc-app-fragment-layout title="User" back-button>
-      <gc-user id="user" auth-user="[[authUser]]"></gc-user>
+    <gc-app-fragment-layout title="User Profile" back-button>
+      <gc-user id="user"></gc-user>
     </gc-app-fragment-layout>
   </template>
   <script>
