--- a/src/gc-dashboard/gc-repos.html
+++ b/src/gc-dashboard/gc-repos.html
@@ -4,12 +4,26 @@
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
 <link rel="import" href="../gc-common/gc-api-ajax.html">
 
 <dom-module id="gc-repos">
   <template>
     <style include="shared-styles"></style>
+    <style>
+      paper-fab{
+        position: fixed;
+        right: 1rem;
+        bottom: 1rem;
+      }
+      @media (min-width: 842px) {
+        paper-fab{
+          right: 2rem;
+          bottom: 2rem;
+        }
+      }
+    </style>
 
     <gc-api-ajax id="get" url="/user/repos" on-response="_handleGetResponse" last-response="{{repos}}"></gc-api-ajax>
     <gc-api-ajax id="put" method="put" url="/user/repos" on-response="_handlePutResponse" last-response="{{_newRepos}}"></gc-api-ajax>
@@ -17,10 +31,6 @@
     <paper-toast id="putDoneToast" text="Your repos has been updated."></paper-toast>
 
     <paper-material elevation="1">
-      <div class="layout horizontal">
-        <p class="flex">Your Repositories</p>
-        <paper-icon-button icon="refresh" on-tap="updateRepos"></paper-icon-button>
-      </div>
       <paper-listbox>
         <template is="dom-if" if="[[noRepos]]">
           <paper-item><i>So lonely here :( You can always refresh to fetch repos from GitHub</i></paper-item>
@@ -32,6 +42,10 @@
         </template>
       </paper-listbox>
     </paper-material>
+
+    <paper-fab icon="refresh" on-tap="updateRepos"></paper-fab>
+
+
   </template>
   <script>
   (() => {
