--- a/src/gc-user/gc-user-managed-accounts-terms-of-service-info.html
+++ b/src/gc-user/gc-user-managed-accounts-terms-of-service-info.html
@@ -16,7 +16,7 @@
       cursor: pointer;
     }
     </style>
-    <gc-api-ajax id="put" url="/user/managed-accounts/terms-of-service" method="put" auth-user="[[authUser]]" on-response="_handleInfoUpdatedResponse"></gc-api-ajax>
+    <gc-api-ajax id="put" url="/user/managed-accounts/terms-of-service" method="put" on-response="_handleInfoUpdatedResponse"></gc-api-ajax>
 
     <paper-toast id="toast" text="Your TOS acceptance has been submited."></paper-toast>
 
