Imports fix and sections in repo

--- a/src/gc-app/gc-app.html
+++ b/src/gc-app/gc-app.html
@@ -48,8 +48,7 @@
       get lazyComponents() {
         return [
           '../gc-dashboard/gc-dashboard-shell.html',
-          '../gc-user/gc-user-shell.html',
-          '../gc-app/gc-account-setup.html'
+          '../gc-user/gc-user-shell.html'
         ];
       }
       ready() {
