--- a/src/gc-layouts/gc-app-fragment-layout.html
+++ b/src/gc-layouts/gc-app-fragment-layout.html
@@ -42,6 +42,10 @@
       z-index: 103;
     }
 
+    [main-title] ::slotted(a){
+      pointer-events: all;
+    }
+
     paper-progress[hide] {
       opacity: 0;
       pointer-events: none;
@@ -64,8 +68,8 @@
         </template>
         <div main-title>
           {{title}}
+          <slot select="[title-addon]"></slot>
         </div>
-        <slot select="[title-addon]"></slot>
         <template is="dom-if" if="[[_narrowLayout]]">
           <iron-image src="../../images/logo.svg"></iron-image>
         </template>
