--- a/src/gc-layouts/gc-app-shell-layout.html
+++ b/src/gc-layouts/gc-app-shell-layout.html
@@ -28,10 +28,9 @@
         text-align: center;
       }
       .user-toolbar > iron-image {
+        min-height: 100px;
         height: 100px;
         width: 100px;
-        /*--iron-image-height: 100px;
-        --iron-image-width: 100px;*/
         border-radius: 50px;
       }
       .drawer-content {
@@ -74,7 +73,7 @@
           </paper-menu>
           <div class="user-toolbar">
             <p>[[user.githubLogin]]</p>
-            <iron-image src="https://github.com/[[user.githubLogin]].png?size=100"></iron-image>
+            <iron-image src="[[githubAvatarUrl]]"></iron-image>
             <a href="/app/logout" tabindex="-1" on-tap="_toggleDrawer">
               <paper-button>
                 <iron-icon icon="exit-to-app" item-icon></iron-icon>
@@ -96,8 +95,19 @@
       get is() {
         return 'gc-app-shell-layout';
       }
+      get properties() {
+        return {
+          githubAvatarUrl: {
+            type: String,
+            computed: '_computeGithubAvatarUrl(user)'
+          }
+        };
+      }
       ready() {
         this.$.get.generateRequest();
+      }
+      _computeGithubAvatarUrl(user) {
+        return `https://github.com/${user.githubLogin}.png?size=100`;
       }
       _updateDrawerLayout() {
         this.fire('iron-signal', {
