Added repo icon

--- a/src/gc-layouts/gc-app-shell-layout.html
+++ b/src/gc-layouts/gc-app-shell-layout.html
@@ -57,7 +57,7 @@
             <a href="/app" on-tap="_toggleDrawer">
               <paper-item>
                 <paper-icon-item>
-                  <iron-icon icon="home" item-icon></iron-icon>
+                  <iron-icon icon="gc:repo" item-icon></iron-icon>
                   Repositories
                 </paper-icon-item>
               </paper-item>
