--- a/src/gc-common/gc-icons.html
+++ b/src/gc-common/gc-icons.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../bower_components/iron-iconset-svg/iron-iconset-svg.html">
 
-<iron-iconset-svg name="gc-icons" size="32">
+<iron-iconset-svg name="gc" size="32">
   <svg>
     <defs>
       <g id="github">
@@ -8,6 +8,9 @@
       </g>
       <g id="twitter">
         <path d="M32,6.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6C25.7,3.8,24,3,22.2,3 c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5C10.3,10.8,5.5,8.2,2.2,4.2c-0.6,1-0.9,2.1-0.9,3.3c0,2.3,1.2,4.3,2.9,5.5 c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1C2.9,27.9,6.4,29,10.1,29c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C30,8.5,31.1,7.4,32,6.1z"/>
+      </g>
+      <g id="repo">
+        <path d="M12,18 L10,18 L10,16 L12,16 L12,18 z M12,12 L10,12 L10,14 L12,14 L12,12 z M12,8 L10,8 L10,10 L12,10 L12,8 z M12,4 L10,4 L10,6 L12,6 L12,4 z M28,2 L28,26 C28,27.1 27.1,28 26,28 L16,28 L16,32 L13,29 L10,32 L10,28 L6,28 C4.9,28 4,27.1 4,26 L4,2 C4,0.9 4.9,0 6,0 L26,0 C27.1,0 28,0.9 28,2 z M26,22 L6,22 L6,26 L10,26 L10,24 L16,24 L16,26 L26,26 L26,22 z M26,2 L8,2 L8,20 L26,20 L26,2 z" />
       </g>
     </defs>
   </svg>
