--- a/src/gc-landing-page/gc-landing-page.html
+++ b/src/gc-landing-page/gc-landing-page.html
@@ -255,10 +255,10 @@
             <p>If you have any questions, please do not hesitate and reach us on Twitter or create issue/pr on one of our repos!</p>
             <div class="layout horizontal center-center">
               <a href="https://twitter.com/gitcheese" tabindex="-1" target="_blank">
-                <paper-icon-button class="giant" icon="gc-icons:twitter"></paper-icon-button>
+                <paper-icon-button class="giant" icon="gc:twitter"></paper-icon-button>
               </a>
               <a href="https://github.com/gitcheese" tabindex="-1" target="_blank">
-                <paper-icon-button class="giant" icon="gc-icons:github"></paper-icon-button>
+                <paper-icon-button class="giant" icon="gc:github"></paper-icon-button>
               </a>
             </div>
           </gc-landing-page-section>
