--- a/src/gc-repo/gc-repo-shell.html
+++ b/src/gc-repo/gc-repo-shell.html
@@ -16,7 +16,7 @@
     </style>
     <gc-app-fragment-layout title="[[repo.name]]" back-button>
       <a title-addon href="https://github.com/[[repo.fullname]]" target="_blank">
-        <paper-icon-button  icon="gc-icons:github"></paper-icon-button>
+        <paper-icon-button  icon="gc:github"></paper-icon-button>
       </a>
       <gc-repo id="repo" repo-id="[[repoId]]" repo="{{repo}}"></gc-repo>
     </gc-app-fragment-layout>
