--- a/src/gc-layouts/gc-app-fragment-layout.html
+++ b/src/gc-layouts/gc-app-fragment-layout.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html">
+<link rel="import" href="../../bower_components/app-layout/app-header-layout/app-header-layout.html">
 <link rel="import" href="../../bower_components/app-layout/app-header/app-header.html">
 <link rel="import" href="../../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
@@ -13,74 +14,79 @@
   <template>
     <style include="shared-styles"></style>
     <style>
-    .content-wrapper {
-      @apply(--layout-horizontal);
-      @apply(--layout-center-justified);
-    }
-
-    .content {
-      max-width: 841px;
-      @apply(--layout-flex);
-    }
-
-    @media (min-width: 842px) {
-      .content {
-        padding: 1rem;
+      .content-wrapper {
+        @apply(--layout-horizontal);
+        @apply(--layout-center-justified);
       }
-    }
-    @media (max-width: 841px) {
+
       .content {
-        padding: 0;
+        max-width: 841px;
+        @apply(--layout-flex);
       }
-    }
 
-    paper-progress {
-      background-color: var(--primary-background-color);
-      transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-      width: 100%;
-      margin-bottom: -4px;
-      z-index: 103;
-    }
+      @media (min-width: 842px) {
+        .content {
+          padding: 1rem;
+        }
+      }
+      @media (max-width: 841px) {
+        .content {
+          padding: 0;
+        }
+      }
 
-    [main-title] ::slotted(a){
-      pointer-events: all;
-    }
+      paper-progress {
+        background-color: var(--primary-background-color);
+        transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+        width: 100%;
+        margin-bottom: -4px;
+        z-index: 103;
+      }
 
-    paper-progress[hide] {
-      opacity: 0;
-      pointer-events: none;
-    }
+      [main-title] ::slotted(a){
+        pointer-events: all;
+      }
 
-    iron-image {
-      --iron-image-height: 50px;
-    }
+      paper-progress[hide] {
+        opacity: 0;
+        pointer-events: none;
+      }
 
+      iron-image {
+        --iron-image-height: 50px;
+      }
+
+      app-header-layout[has-scrolling-region] {
+        height: 100vh;
+      }
     </style>
     <iron-signals on-iron-signal-drawer-layout-narrow-changed="_handleNarrowLayoutChanged"></iron-signals>
-
-    <app-header condenses reveals effects="waterfall">
-      <app-toolbar>
-        <template is="dom-if" if="[[_showBurgerButton]]">
-          <paper-icon-button icon="menu" on-tap="_toggleDrawer"></paper-icon-button>
-        </template>
-        <template is="dom-if" if="[[backButton]]">
-          <paper-icon-button icon="arrow-back" on-tap="_handleBackTap"></paper-icon-button>
-        </template>
-        <div main-title>
-          {{title}}
-          <slot select="[title-addon]"></slot>
+    <app-header-layout fullblead has-scrolling-region>
+      <app-header reveals effects="waterfall">
+        <app-toolbar>
+          <template is="dom-if" if="[[_showBurgerButton]]">
+            <paper-icon-button icon="menu" on-tap="_toggleDrawer"></paper-icon-button>
+          </template>
+          <template is="dom-if" if="[[backButton]]">
+            <paper-icon-button icon="arrow-back" on-tap="_handleBackTap"></paper-icon-button>
+          </template>
+          <div main-title>
+            {{title}}
+            <slot select="[title-addon]"></slot>
+          </div>
+          <template is="dom-if" if="[[_narrowLayout]]">
+            <iron-image src="../../images/logo.svg"></iron-image>
+          </template>
+        </app-toolbar>
+      </app-header>
+      <paper-progress hide$="{{!loading}}" indeterminate></paper-progress>
+      <div class="content-wrapper">
+        <div class="content">
+          <slot></slot>
         </div>
-        <template is="dom-if" if="[[_narrowLayout]]">
-          <iron-image src="../../images/logo.svg"></iron-image>
-        </template>
-      </app-toolbar>
-    </app-header>
-    <paper-progress hide$="{{!loading}}" indeterminate></paper-progress>
-    <div class="content-wrapper">
-      <div class="content">
-        <slot></slot>
       </div>
-    </div>
+    </app-header-layout>
+
   </template>
   <script>
   (() => {
