--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
   <style>
   body {
     margin: 0;
+    min-height: 100vh;
     font-family: 'Roboto', 'Noto', sans-serif;
     color: #212121;
     line-height: 1.5;
-    min-height: 100vh;
     background-color: #eeeeee;
+    overflow: hidden;
   }
   </style>
 </head>
