Typo on select country page

--- a/src/gc-app/gc-account-setup.html
+++ b/src/gc-app/gc-account-setup.html
@@ -47,7 +47,7 @@
         </template>
       </paper-listbox>
     </paper-dropdown-menu>
-    <i>This information is crucial to propperly setup Stripe account and be ablle to send your donations back to you.</i>
+    <i>This information is crucial to propperly setup Stripe account and be able to send your donations back to you.</i>
     <i>Please select country that you have your bank account in.</i>
     <div actions>
       <paper-button on-tap="_submit">submit</paper-button>
