--- a/src/gc-app/gc-login.html
+++ b/src/gc-app/gc-login.html
@@ -29,12 +29,17 @@
       @apply(--layout-center-center);
     }
 
-    iron-image {
+    [logo] {
       margin-top: 1rem;
       margin-bottom: 2rem;
-      height: 250px;
-      width: 277px;
-      --iron-image-height: 250px;
+      height: 280px;
+      width: 280px;
+      --iron-image-height: 220px;
+      --iron-image-width: 220px;
+      background-color: var(--primary-background-color);
+      border-radius: 50%;
+      @apply(--layout-horizontal);
+      @apply(--layout-center-center);
     }
     </style>
     <gc-config api-uri="{{apiUri}}"></gc-config>
@@ -45,7 +50,9 @@
 
     <section>
       <h1 hero-title>Gitcheese</h1>
-      <iron-image sizing="contain" preload fade src="../../images/logo.svg" placeholder="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAAXNSR0IArs4c6QAAAAlwSFlzAAAK6wAACusBgosNWgAAAC9JREFUCB1jnNaX2Swpwmz1/M3fuSxKcuKmTGwiwtLMj40Z9u/fz3Hu3DkXBiAAAAj5DM/0IBh2AAAAAElFTkSuQmCC"></iron-image>
+      <!-- <div logo-container> -->
+        <iron-image logo src="../../images/logo.svg"></iron-image>
+      <!-- </div> -->
       <paper-button on-tap="_login">
         <iron-icon icon="account-circle"></iron-icon>Login With GitHub
       </paper-button>
