Fixed scrolling on landing page

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     color: #212121;
     line-height: 1.5;
     background-color: #eeeeee;
-    overflow: hidden;
+    overflow-x: hidden;
   }
   </style>
 </head>
