Fixing app-layout scrolling region

--- a/src/gc-layouts/gc-app-fragment-layout.html
+++ b/src/gc-layouts/gc-app-fragment-layout.html
@@ -61,8 +61,8 @@
       }
     </style>
     <iron-signals on-iron-signal-drawer-layout-narrow-changed="_handleNarrowLayoutChanged"></iron-signals>
-    
-    <app-header-layout has-scrolling-region>
+
+    <app-header-layout>
       <app-header reveals effects="waterfall">
         <app-toolbar>
           <template is="dom-if" if="[[_showBurgerButton]]">
