--- a/src/gc-layouts/gc-app-shell-layout.html
+++ b/src/gc-layouts/gc-app-shell-layout.html
@@ -46,7 +46,7 @@
 
     <gc-api-ajax id="get" url="/user" last-response="{{user}}"></gc-api-ajax>
 
-    <app-drawer-layout id="drawerLayout" fullbleed responsive-width="841px" on-narrow-changed="_updateDrawerLayout">
+    <app-drawer-layout id="drawerLayout" responsive-width="841px" on-narrow-changed="_updateDrawerLayout">
       <app-drawer id="drawer">
         <app-toolbar class="brand-toolbar">
           <iron-image src="../../images/logo.svg"></iron-image>
@@ -83,7 +83,7 @@
           </div>
         </div>
       </app-drawer>
-      <content></content>
+      <slot></slot>
     </app-drawer-layout>
   </template>
   <script>
