Added swipe open on drawer

--- a/src/gc-layouts/gc-app-shell-layout.html
+++ b/src/gc-layouts/gc-app-shell-layout.html
@@ -47,7 +47,7 @@
     <gc-api-ajax id="get" url="/user" last-response="{{user}}"></gc-api-ajax>
 
     <app-drawer-layout id="drawerLayout" responsive-width="841px" on-narrow-changed="_updateDrawerLayout">
-      <app-drawer id="drawer">
+      <app-drawer swipe-open id="drawer">
         <app-toolbar class="brand-toolbar">
           <iron-image src="../../images/logo.svg"></iron-image>
           <span class="flex">Gitcheese</span>
