Fixed Netherlands country code

--- a/src/gc-landing-page/gc-landing-page.html
+++ b/src/gc-landing-page/gc-landing-page.html
@@ -354,7 +354,7 @@
               code: 'no'
             }, {
               name: 'Netherlands',
-              code: 'ne'
+              code: 'nl'
             }, {
               name: 'Singapore',
               code: 'sg'
