--- a/src/gc-shell/gc-shell.html
+++ b/src/gc-shell/gc-shell.html
@@ -1,10 +1,10 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../bower_components/app-route/app-route.html">
+<link rel="import" href="../../bower_components/app-active-route/app-active-route.html">
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../facebook-pixel/facebook-pixel.html">
 <link rel="import" href="../gc-styles/gc-shared-styles.html">
-<link rel="import" href="../gc-common/gc-active-route.html">
 <link rel="import" href="../gc-landing-page/gc-landing-page.html">
 <link rel="import" href="../gc-app/gc-app-loader-shell.html">
 <link rel="import" href="../gc-donate-app/gc-donate-app-loader-shell.html">
@@ -15,11 +15,11 @@
     <facebook-pixel pixel-id="535325640007099"></facebook-pixel>
 
     <app-location route="{{route}}"></app-location>
-    <gc-active-route pattern="{{activePattern}}" fallback-pattern="/">
+    <app-active-route pattern="{{activePattern}}" fallback-pattern="/">
       <app-route route="{{route}}" pattern="/"></app-route>
       <app-route route="{{route}}" pattern="/app" tail="{{appSubroute}}"></app-route>
       <app-route route="{{route}}" pattern="/donate" tail="{{donateSubroute}}"></app-route>
-    </gc-active-route>
+    </app-active-route>
 
     <iron-pages selected="[[activePattern]]" attr-for-selected="for-pattern" selected-attribute="active">
       <gc-landing-page for-pattern="/"></gc-landing-page>
