--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 
 <body>
   <gc-shell></gc-shell>
+  <noscript>
+    Please enable JavaScript to view this website.
+  </noscript>
 </body>
 
 </html>
